--- a/2.5Platformer.CSharp.csproj
+++ b/2.5Platformer.CSharp.csproj
@@ -58,6 +58,12 @@
     <Reference Include="UnityEngine.Networking">
       <HintPath>Library\UnityAssemblies\UnityEngine.Networking.dll</HintPath>
     </Reference>
+    <Reference Include="UnityEngine.Networking">
+      <HintPath>Library\UnityAssemblies\UnityEngine.Networking.dll</HintPath>
+    </Reference>
+    <Reference Include="UnityEngine.UI">
+      <HintPath>Library\UnityAssemblies\UnityEngine.UI.dll</HintPath>
+    </Reference>
     <Reference Include="UnityEditor">
       <HintPath>Library\UnityAssemblies\UnityEditor.dll</HintPath>
     </Reference>
@@ -66,6 +72,7 @@
     <Compile Include="Assets\RoomManager.cs" />
     <Compile Include="Assets\Scripts\CardManager\Armor.cs" />
     <Compile Include="Assets\Scripts\CardManager\Card.cs" />
+    <Compile Include="Assets\Scripts\CardManager\CardManager.cs" />
     <Compile Include="Assets\Scripts\CardManager\Collectible.cs" />
     <Compile Include="Assets\Scripts\CardManager\Collection.cs" />
     <Compile Include="Assets\Scripts\CardManager\Deck.cs" />
@@ -74,8 +81,6 @@
     <Compile Include="Assets\Scripts\CardManager\Monster.cs" />
     <Compile Include="Assets\Scripts\CardManager\Weapon.cs" />
     <Compile Include="Assets\Scripts\Doorway.cs" />
-    <Compile Include="Assets\Scripts\DungeonBuilder.cs" />
-    <Compile Include="Assets\Scripts\LevelBuilder.cs" />
     <Compile Include="Assets\Scripts\PlayerController.cs" />
     <Compile Include="Assets\Scripts\Room.cs" />
     <Compile Include="Assets\Scripts\RoomBuilder.cs" />
