--- a/2.5Platformer.CSharp.csproj
+++ b/2.5Platformer.CSharp.csproj
@@ -58,12 +58,6 @@
     <Reference Include="UnityEngine.Networking">
       <HintPath>Library\UnityAssemblies\UnityEngine.Networking.dll</HintPath>
     </Reference>
-    <Reference Include="UnityEngine.Networking">
-      <HintPath>Library\UnityAssemblies\UnityEngine.Networking.dll</HintPath>
-    </Reference>
-    <Reference Include="UnityEngine.UI">
-      <HintPath>Library\UnityAssemblies\UnityEngine.UI.dll</HintPath>
-    </Reference>
     <Reference Include="UnityEditor">
       <HintPath>Library\UnityAssemblies\UnityEditor.dll</HintPath>
     </Reference>
@@ -88,6 +82,7 @@
     <Compile Include="Assets\Monsters\Behaviour.cs" />
     <Compile Include="Assets\Monsters\Behaviours\Charge.cs" />
     <Compile Include="Assets\Monsters\Behaviours\Jumpy.cs" />
+    <Compile Include="Assets\Monsters\Behaviours\Wander.cs" />
     <Compile Include="Assets\Monsters\State Managers\Basic.cs" />
     <Compile Include="Assets\Monsters\StateManager.cs" />
     <Compile Include="Assets\Pickup.cs" />
