--- a/2.5Platformer.CSharp.csproj
+++ b/2.5Platformer.CSharp.csproj
@@ -104,8 +104,10 @@
     <Compile Include="Assets\Scripts\PlayerController.cs" />
     <Compile Include="Assets\Scripts\Room.cs" />
     <Compile Include="Assets\SwordSingle.cs" />
+    <Compile Include="Assets\UI\CardList.cs" />
     <Compile Include="Assets\UI\DeckButton.cs" />
     <Compile Include="Assets\UI\DeckList.cs" />
+    <Compile Include="Assets\UI\DeckPreview.cs" />
     <Compile Include="Assets\UI\StartMenu.cs" />
     <Compile Include="Assets\UnityPackages\JsonNetSample\JsonNetSample.cs" />
     <Compile Include="Assets\Weapon.cs" />
