--- a/2.5Platformer.CSharp.csproj
+++ b/2.5Platformer.CSharp.csproj
@@ -100,6 +100,7 @@
     <Compile Include="Assets\Scripts\Abilities\BowMultiDirectionShot.cs" />
     <Compile Include="Assets\Scripts\Abilities\BowMultishot.cs" />
     <Compile Include="Assets\Scripts\Abilities\BowUltimateAbility.cs" />
+    <Compile Include="Assets\Scripts\DontDestroy.cs" />
     <Compile Include="Assets\Scripts\Doorway.cs" />
     <Compile Include="Assets\Scripts\PlayerController.cs" />
     <Compile Include="Assets\Scripts\Room.cs" />
