--- a/2.5Platformer.CSharp.csproj
+++ b/2.5Platformer.CSharp.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Assets\Behaviours\PlayerMovement.cs" />
     <Compile Include="Assets\Behaviours\Triggers\AxisInput.cs" />
     <Compile Include="Assets\Behaviours\Triggers\Grounded.cs" />
+    <Compile Include="Assets\Behaviours\Triggers\Timer.cs" />
     <Compile Include="Assets\Behaviours\Triggers\Trigger.cs" />
     <Compile Include="Assets\Cards\Card.cs" />
     <Compile Include="Assets\Cards\CardManager.cs" />
