Add Basic movement towards target

--- a/2.5Platformer.CSharp.csproj
+++ b/2.5Platformer.CSharp.csproj
@@ -73,6 +73,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Behaviours\DropDown.cs" />
+    <Compile Include="Assets\Behaviours\HorizontalTargetMove.cs" />
     <Compile Include="Assets\Behaviours\Jump.cs" />
     <Compile Include="Assets\Behaviours\PlayerMovement.cs" />
     <Compile Include="Assets\Behaviours\Triggers\AxisInput.cs" />
