--- a/2.5Platformer.CSharp.csproj
+++ b/2.5Platformer.CSharp.csproj
@@ -117,6 +117,7 @@
     <Compile Include="Assets\Scripts\ProjectileCollisions.cs" />
     <Compile Include="Assets\Scripts\Room.cs" />
     <Compile Include="Assets\Scripts\RoomManager.cs" />
+    <Compile Include="Assets\Scripts\RoomTracker.cs" />
     <Compile Include="Assets\Scripts\SwordSingle.cs" />
     <Compile Include="Assets\Scripts\Weapon.cs" />
     <Compile Include="Assets\UI\CardList.cs" />
